--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,7 @@ h1 {
     color:teal
 }
        
+p {
+     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+     font-size: 18px; font-style: normal; font-variant: normal; font-weight: 300; line-height: 26.4px; }
+}
