--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+
+ul {
+    display: inline;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 18px; font-style: normal; font-variant: normal; font-weight: 300; line-weight: 26.4px;
+}
+
 h1 {
     color:teal
 }
@@ -5,4 +12,8 @@ h1 {
 p {
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
      font-size: 18px; font-style: normal; font-variant: normal; font-weight: 300; line-height: 26.4px; }
+}
+
+#footer {
+    font-size: 0.75rem;
 }
