--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 
-ul {
-    display: inline;
+.direction{
+    display: inline; 
+    float: right;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 18px; font-style: normal; font-variant: normal; font-weight: 300; line-weight: 26.4px;
-}
+    }
 
 h1 {
     color:teal
@@ -14,6 +15,6 @@ p {
      font-size: 18px; font-style: normal; font-variant: normal; font-weight: 300; line-height: 26.4px; }
 }
 
-#footer {
+.footer {
     font-size: 0.75rem;
 }
