--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,6 @@ p {
      font-size: 18px; font-style: normal; font-variant: normal; font-weight: 300; line-height: 26.4px; }
 }
 
-.footer {
+#footer {
     font-size: 0.75rem;
 }
